fix: remove extra margin at bottom of each piece

--- a/src/app/piece-layout/piece-layout.component.scss
+++ b/src/app/piece-layout/piece-layout.component.scss
@@ -1,5 +1,7 @@
 .layout {
-    // width: calc(10in - 5px);
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .selected {
